--- a/.github/workflows/deploygh.yml
+++ b/.github/workflows/deploygh.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 19.5
-      - uses: actions/setup-node@v3
+      - name: "Use Node.js 19.5"
+        uses: actions/setup-node@v3
         with:
           node-version: 19.5
       - name: Deploy
