fix branch name

--- a/.github/workflows/deploygh.yml
+++ b/.github/workflows/deploygh.yml
@@ -1,9 +1,9 @@
 name: deploy-gh
-run-name: ${{ github.actor }} is learning GitHub Actions
+
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy-gh:
