--- a/.github/workflows/deploygh.yml
+++ b/.github/workflows/deploygh.yml
@@ -17,5 +17,7 @@ jobs:
       - name: Deploy
         run: |
           cd github-pages
+          git config --global user.email "ludwig.opulski@gmail.com"
+          git config --global user.name "Ludwig Opulski"
           npm ci
           npm run deploy
