--- a/github-pages/package.json
+++ b/github-pages/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "firebase": "^10.1.0",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
